--- a/CSS/main.CSS
+++ b/CSS/main.CSS
@@ -1,8 +1,5 @@
 body{
-    background-image: url(/assets/photos/wallpaper.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #333;
     margin: 0;
     color: white;
     width: 100vw;
@@ -11,11 +8,14 @@ body{
 }
 
 header{
+    border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 170%;
     box-shadow: 0 0 100px rgba(0, 0, 0, 1) ;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 header h1{
     margin: 0;
